Bug 13183 - Improve visibility of automatic on-site checkout rule when OnSiteCheckoutsForce is on
This patch addresses the case where OnSiteCheckoutsForce is enabled and
the user is checking out to a patron who is blocked from checking out.
Instead of showing the 'specify due date' form (which is disabled) this
patch hides it and highlights the on-site checkout controls.

This patch adds some CSS and consolidates some redundant CSS.

To test, load a patron for checkout under the following conditions:

1. OnSiteCheckoutsForce is off and patron is not blocked from checkout
2. OnSiteCheckoutsForce is off, patron is blocked from checkout (for
   being expired or restricted).
3. OnSiteCheckoutsForce is on and patron is not blocked from checkout
4. OnSiteCheckoutsForce is on and patron is blocked from checkout

Checked these 4 conditions, plus that if a specified due date was allowed, that it was enforced.

I noted that the on-site checkouts seemed to take longer to process, but this probably isn't the place for that sort of complaint.

Small visual improvment for a new feature. No problems found.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -968,7 +968,8 @@ tr.highlight th[scope=row] {
 	margin: .2em 0;
 }
 
-.date-select {
+.date-select,
+.onsite_checkout-select {
     font-size : 85%;
     padding-top : .3em;
 }
@@ -2715,16 +2716,16 @@ span.browse-button {
     color : #FFF;
 }
 
-.onsite_checkout-select {
-    font-size : 85%;
-    font-weight: normal;
-    padding-top : .3em;
-}
 #circ_circulation_issue .onsite_checkout-select label,
 .onsite_checkout-select label {
     font-size : inherit;
     font-weight: normal;
 }
 span.onsite_checkout {
-    color: red;
+    color: #cc0000;
+}
+.onsite-checkout-only {
+    background-color : rgba(255, 242, 206, 0.5);
+    border-radius: 4px;
+    border : 1px solid #FFF2CE;
 }
